--- a/manifests/application.yaml
+++ b/manifests/application.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: wil
-  namesapce: dev
+  namespace: dev
   labels:
     app: wil
 spec:
@@ -20,10 +20,11 @@ spec:
           ports:
             - containerPort: 8888
 ---
-apiverion: v1
+apiVerion: v1
 kind: Service
 metadata:
   name: svc-wil
+  namespace: dev
 spec:
   selector:
     app: wil
