--- a/manifests/application.yaml
+++ b/manifests/application.yaml
@@ -25,10 +25,14 @@ kind: Service
 metadata:
   name: svc-wil
   namespace: dev
+  labels:
+    app: wil
 spec:
+  type: ClusterIP
   selector:
     app: wil
   ports:
-    - protocol: TCP
+    - name: http
+      protocol: TCP
       port: 8080
       targetPort: 8888
