--- a/manifests/application.yaml
+++ b/manifests/application.yaml
@@ -20,7 +20,7 @@ spec:
           ports:
             - containerPort: 8888
 ---
-apiVerion: v1
+apiVersion: v1
 kind: Service
 metadata:
   name: svc-wil
