--- a/manifests/application.yaml
+++ b/manifests/application.yaml
@@ -18,21 +18,16 @@ spec:
         - name: wil
           image: wil42/playground:v1
           ports:
-            - containerPort: 8888
+          - containerPort: 8888
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: svc-wil
-  namespace: dev
-  labels:
-    app: wil
 spec:
-  type: ClusterIP
   selector:
     app: wil
   ports:
-    - name: http
-      protocol: TCP
-      port: 8080
+    - protocol: TCP
+      port: 8888
       targetPort: 8888
