--- a/manifests/application.yaml
+++ b/manifests/application.yaml
@@ -18,12 +18,13 @@ spec:
         - name: wil
           image: wil42/playground:v1
           ports:
-          - containerPort: 8888
+            - containerPort: 8888
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: svc-wil
+  namespace: dev
 spec:
   selector:
     app: wil
@@ -31,3 +32,4 @@ spec:
     - protocol: TCP
       port: 8888
       targetPort: 8888
+  type: LoadBalancer
